<resources>
    <string name="app_name">Digital House Food</string>
    <string name="til_username">dh@digitalhouse.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="emaildh">dh@digitalhouse.com</string>
    <string name="btnLoggin">Log in</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="nome">DigitalHouse</string>
    <string name="confirmPassword">Reapet password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto">Sed ut perspiciatis, unde omnis iste natus erros sit voluptatem accusant doloremque laudantium. totam rem aperiam esque ipsa, quae ab illo inventore veritatis.</string>
    <string name="nomeRestaurante">Tony Roma\'s</string>
</resources>